--- a/package.json
+++ b/package.json
@@ -11,11 +11,23 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@mysten/dapp-kit": "^0.14.40",
+    "@mysten/sui": "^1.16.0",
+    "@mysten/suins": "^0.4.1",
+    "@mysten/wallet-standard": "^0.13.16",
     "@stylin.js/elements": "^1.0.2",
+    "@tanstack/react-query": "^5.62.7",
+    "@types/ramda": "^0.30.2",
+    "bignumber.js": "^9.1.2",
+    "framer-motion": "^11.14.4",
     "next": "14.0.3",
     "prettier": "^3.1.0",
+    "ramda": "^0.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.5",
+    "unikey": "^1.1.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.11.0",
