--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.3",
     "@emotion/react": "^11.11.1",
     "@mysten/dapp-kit": "^0.14.40",
     "@mysten/sui": "^1.16.0",
@@ -19,13 +20,16 @@
     "@tanstack/react-query": "^5.62.7",
     "@types/ramda": "^0.30.2",
     "bignumber.js": "^9.1.2",
+    "decimal.js-light": "^2.5.1",
     "framer-motion": "^11.14.4",
+    "graphql": "^16.9.0",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "ramda": "^0.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.5",
+    "toformat": "^2.0.0",
     "unikey": "^1.1.0",
     "zustand": "^5.0.2"
   },
