--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.54.1",
     "react-image-file-resizer": "^0.4.8",
     "swr": "^2.2.5",
+    "tiny-invariant": "^1.3.3",
     "toformat": "^2.0.0",
     "unikey": "^1.1.0",
     "zustand": "^5.0.2"
