--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tiny-invariant": "^1.3.3",
     "toformat": "^2.0.0",
     "unikey": "^1.1.0",
+    "usehooks-ts": "^3.1.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
