--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.1",
     "react-image-file-resizer": "^0.4.8",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
