--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.1.0",
     "ramda": "^0.30.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.1",
