--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.3",
     "@emotion/react": "^11.11.1",
+    "@hookform/resolvers": "^3.10.0",
     "@mysten/dapp-kit": "^0.14.40",
     "@mysten/sui": "^1.16.0",
     "@mysten/suins": "^0.4.1",
@@ -37,6 +38,7 @@
     "toformat": "^2.0.0",
     "unikey": "^1.1.0",
     "usehooks-ts": "^3.1.0",
+    "yup": "^1.6.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
