--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-paginate": "^8.2.0",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
     "toformat": "^2.0.0",
