--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/ramda": "^0.30.2",
     "bignumber.js": "^9.1.2",
     "decimal.js-light": "^2.5.1",
-    "framer-motion": "^11.14.4",
     "graphql": "^16.9.0",
+    "motion": "^11.18.0",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "ramda": "^0.30.1",
