--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GRAPHQL_URI_MAINNET=NEXT_PUBLIC_GRAPHQL_URI_MAINNET
-NEXT_PUBLIC_GRAPHQL_URI_TESTNET=NEXT_PUBLIC_GRAPHQL_URI_TESTNET
+NEXT_PUBLIC_GRAPHQL_URI=
+NEXT_PUBLIC_NETWORK=
