--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bignumber.js": "^9.1.2",
     "decimal.js-light": "^2.5.1",
     "graphql": "^16.9.0",
+    "i": "^0.3.7",
     "motion": "^11.18.0",
     "next": "14.0.3",
+    "npm": "^11.1.0",
     "prettier": "^3.1.0",
     "ramda": "^0.30.1",
     "react": "^18.2.0",
@@ -34,6 +36,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
